# Bad-Stealer

./: .gitignore  README.md
StealerExplain/: ENGLISH.md  FRENCH.md
Summary/: RESUME.md  SUMMARY.md
bad-stealer/: Cargo.toml  build.zig  build.zig.zon
bad-stealer/src/: config.rs  main.rs
bad-stealer/src/utils/: platform.rs
bad-stealer/src/watcher/: mod.rs
