[package]
name = "bad-stealer"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "2"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]

pnet = "0.34.0"
pcap = "1.1.0"
tokio = { version = "1.38.0", features = ["full"] }

url = "2.5.0"
httparse = "1.8.0"
trust-dns-resolver = "0.23.2"

regex = "1.10.3"
sysinfo = { version = "0.30.5", features = ["network", "process"] }
which = "6.0.1"

notify = { version = "6.1.1", features = ["recommended"] }
log = "0.4.21"
env_logger = "0.11.3"
