[package]
name = "bad-stealer"
version = "0.1.0"
authors = ["7klow"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/7klow/Bad-Stealer"

[dependencies]
# Manipulation réseau et paquets
pnet = "0.35.0"
pcap = "2.2.0"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1"
notify = "8"
colored = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific dependencies
windivert = { version = "0.6.0", optional = true }
# Note: nfqueue 0.9.1 a une API différente, mais gardons cette version
nfqueue = { version = "0.9.1", optional = true }

# Pour la gestion des signaux et des permissions (Linux seulement)
ctrlc = { version = "3.4", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
windows = ["dep:windivert"]
linux = ["dep:nfqueue", "dep:ctrlc", "dep:libc"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

